--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "algolia/algoliasearch-client-php": "^2.6",
+        "algolia/search-bundle": "^4.1",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
