--- a/.env
+++ b/.env
@@ -31,3 +31,10 @@ APP_SECRET=bf1c7f645471d91ca52de9c9ac408fb7
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> algolia/search-bundle ###
+# Create a free account on www.algolia.com
+# and get your credentials from the API Keys tab.
+ALGOLIA_APP_ID=plKNTMHFAPTI
+ALGOLIA_API_KEY=9ce06e385adac77792bd67ae26d69adb
+###< algolia/search-bundle ###
