--- a/.env
+++ b/.env
@@ -38,3 +38,9 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.
 ALGOLIA_APP_ID=plKNTMHFAPTI
 ALGOLIA_API_KEY=9ce06e385adac77792bd67ae26d69adb
 ###< algolia/search-bundle ###
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
